Fix alignment on close button

--- a/tabs/src/components/WhosNext.scss
+++ b/tabs/src/components/WhosNext.scss
@@ -123,6 +123,7 @@ button {
   justify-content: center;
   align-items: center;
   color: white;
+  padding-bottom: 4pt;
 }
 
 .list-item {
